# ft_ls

./: .gitignore  CMakeLists.txt  Makefile
inc/: ft_ls.h
libft/: Makefile  ft_lst_merge_sort.c  ft_lstadd.c  ft_num_len.c  ft_strcmp_lex.c  ft_strdup.c
libft/includes/: libft.h
src/: error.c  flags.c  ft_ls.c  ft_ls_main_routine.c  help_funcs.c  long_output.c  main.c  output.c  parse_input.c  sort.c  sort_funcs.c  stat_parse.c  stat_routine.c
